# bgg_data

./: .gitignore  README.md  pyproject.toml
bgg_data/: __init__.py  config.py  error_handling.py  logging_config.py  models.py
bgg_data/cli/: __init__.py  main.py
bgg_data/database/: __init__.py  collect_data.py  collector.py  models.py  operations.py
bgg_data/debug/: README.md
bgg_data/debug/llm_assessments/: 20250813_143845_Brass_Birmingham_failed_assessment.json  20250813_143853_Brass_Birmingham_failed_assessment.json  20250813_143901_Brass_Birmingham_failed_assessment.json  20250813_143910_Brass_Birmingham_failed_assessment.json  20250813_143918_Brass_Birmingham_failed_assessment.json  20250813_143922_Brass_Birmingham_failed_assessment.json  20250813_143924_Brass_Birmingham_failed_assessment.json  20250813_143927_Brass_Birmingham_failed_assessment.json  20250813_144043_Pandemic_Legacy_Season_1_failed_assessment.json  20250813_144052_Pandemic_Legacy_Season_1_failed_assessment.json  20250813_144100_Pandemic_Legacy_Season_1_failed_assessment.json  20250813_144109_Pandemic_Legacy_Season_1_failed_assessment.json  20250813_144133_Pandemic_Legacy_Season_1_failed_assessment.json  20250813_144134_Pandemic_Legacy_Season_1_failed_assessment.json  20250813_144410_Ark_Nova_failed_assessment.json  20250813_144454_Ark_Nova_failed_assessment.json  20250813_145430_Brass_Birmingham_failed_assessment.json  (+115 more)
bgg_data/rulebooks/: __init__.py  agentic_fetcher.py  utils.py
bgg_data/rulebooks/handlers/: __init__.py  llm.py  (+5 more)
bgg_data_cache/: search_publishers.json  search_scores.json
